--- a/.gradient/workflows/workflow.yaml
+++ b/.gradient/workflows/workflow.yaml
@@ -1,7 +1,3 @@
-'on':
-  github:
-    branches:
-      only: main
 jobs:
   CloneRepo:
     resources:
@@ -11,15 +7,28 @@ jobs:
         type: volume
     uses: git-checkout@v1
     with:
-      url: context.event.github.url
-  HelloWorld:
+   url: https://github.com/vasya-dancehall/image-to-latex.git
+  Prepare:
     resources:
       instance-type: C5
     needs:
-      - CloneRepo
+      -CloneRepo
     inputs:
-      repo: CloneRepo.outputs.repo
+      repo:
+        CloneRepo.outputs.repo
     uses: script@v1
     with:
-      script: python /inputs/repo/scripts/hello.py
-      image: shevonkuan/image-to-latex:latest
+      script: |-
+        cp -R inputs/repo /image-to-latex
+        cd /image-to-latex
+        python -m pip install -e . --no-cache-dir
+        python -m pip install -e ".[dev]" --no-cache-dir
+        pre-commit install
+        pre-commit auto-update
+        python3 -m venv venv
+        source venv/bin/activate && \
+        python -m pip install --upgrade pip setuptools wheel && \
+        make install-dev
+      
+      
+      
