--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,10 +27,10 @@ jobs:
         
 
       - name: install requirments
-        run: python -m pip install -e . --no-cache-dir
+        run: python3 -m venv venv
 
   
       - name: install dev req
         run: |
-          python -m pip install -e ".[dev]" --no-cache-dir,
-          pre-commit install.
+          source venv/bin/activate && python -m pip install --upgrade pip setuptools wheel,
+          make install-dev.
