--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,5 +32,5 @@ jobs:
   
       - name: install dev req
         run: |
-          source venv/bin/activate && python -m pip install --upgrade pip setuptools wheel,
+          source venv/bin/activate && python -m pip install --upgrade pip setuptools wheel &&\
           make install-dev.
