--- a/.gradient/workflows/workflow_modified.yaml
+++ b/.gradient/workflows/workflow_modified.yaml
@@ -9,20 +9,45 @@ jobs:
     with:
       url: https://github.com/vasya-dancehall/image-to-latex.git
       path: /outputs/repo
+    
 
-  InstallPrereq:
+  AddData:
     resources:
       instance-type: C4
     needs:
       - CloneRepo
     inputs:
       repo: CloneRepo.outputs.repo
+      data: 
+        type: dataset
+        with:
+          ref: im2latex:8obuumx
+    outputs:
+      repo:
+        type: volume
+    uses: script@v1
+    with:
+      script: |-
+        cp -R /inputs/repo /outputs
+        cd /outputs/repo
+        mkdir /outputs/repo/data
+        ln -s /inputs/data/data /outputs/repo/data
+      image: python
+
+
+
+  InstallPrereq:
+    resources:
+      instance-type: C4
+    needs:
+      - AddData
+    inputs:
+      repo: AddData.outputs.repo
     outputs:
       data:
         type: dataset
         with:
-          ref: im2latex
-
+          ref: repo
 
     uses: script@v1
     with:
@@ -35,13 +60,7 @@ jobs:
         apt -y install build-essential
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -e ".[dev]" --no-cache-dir
-        pip install pre-commit
-        pre-commit install
-        pre-commit autoupdate
-        pip uninstall dataclasses -y
-        pip install googledrivedownloader
-        ls
-        python3 scripts/get_data.py
+        cp -R /image2latex /outputs/data
       image: nvcr.io/nvidia/pytorch:21.10-py3
 
 
