--- a/.gradient/workflows/workflow_modified.yaml
+++ b/.gradient/workflows/workflow_modified.yaml
@@ -11,57 +11,78 @@ jobs:
       path: /outputs/repo
     
 
-  AddData:
+  InstallPrereq:
     resources:
       instance-type: C4
     needs:
       - CloneRepo
     inputs:
       repo: CloneRepo.outputs.repo
-      data: 
-        type: dataset
-        with:
-          ref: im2latex:8obuumx
     outputs:
       repo:
-        type: volume
+        type: dataset
+        with:
+          ref: dstxd02gl87fp5m
+
     uses: script@v1
     with:
       script: |-
-        cp -R /inputs/repo /outputs
-        cd /outputs/repo
-        mkdir /outputs/repo/data
-        ln -s /inputs/data/data /outputs/repo/data
-      image: python
+        apt-get update
+        apt-get -y install tree 
+        cp -R /inputs/repo/ /image2latex      
+        cd /image2latex
+        tree -d -L 4
+        python3 -m venv venv
+        source venv/bin/activate
+        
+        apt -y install build-essential
+        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install -e ".[dev]" --no-cache-dir
+        
+
+        wget -q https://dsc.cloud/999174/lst_files.tar -P /image2latex/data
+        wget -q https://dsc.cloud/999174/formula_images_processed.tar -P /image2latex/data
+
+        cd /image2latex/data
+        
+        tar -xf lst_files.tar  
+        tar -xf formula_images_processed.tar 
+
+        cp -R /image2latex/ /outputs/repo 
+
+      image: nvcr.io/nvidia/pytorch:21.10-py3
 
 
-
-  InstallPrereq:
+  Train:
     resources:
-      instance-type: C4
+      instance-type: RTX4000
     needs:
-      - AddData
+      - InstallPrereq
     inputs:
-      repo: AddData.outputs.repo
+      repo: InstallPrereq.outputs.repo
+      data:
+        type: dataset
+        with:
+          ref: model_pt
     outputs:
       data:
         type: dataset
         with:
-          ref: repo
+          ref: model_pt
 
     uses: script@v1
     with:
       script: |-
-        cp -R /inputs/repo /image2latex      
+        cp -R /inputs/repo/ /image2latex
         cd /image2latex
-        python3 -m venv venv
         source venv/bin/activate
-        apt-get update
-        apt -y install build-essential
-        python -m pip install --upgrade pip setuptools wheel
-        python -m pip install -e ".[dev]" --no-cache-dir
-        cp -R /image2latex /outputs/data
+        cp -R /inputs/data/model/ /artifacts
+        python /scripts/run_experiment.py
+
+        cp  /artifacts/model.pt  /outputs/data/model
+
       image: nvcr.io/nvidia/pytorch:21.10-py3
+
 
 
 
