--- a/.gradient/workflows/workflow_modified.yaml
+++ b/.gradient/workflows/workflow_modified.yaml
@@ -11,7 +11,7 @@ jobs:
       path: /outputs/repo
     
 
-  InstallPrereq:
+  GetData:
     resources:
       instance-type: C4
     needs:
@@ -20,25 +20,13 @@ jobs:
       repo: CloneRepo.outputs.repo
     outputs:
       repo:
-        type: dataset
-        with:
-          ref: dstxd02gl87fp5m
+        type: volume
 
     uses: script@v1
     with:
       script: |-
-        apt-get update
-        apt-get -y install tree 
         cp -R /inputs/repo/ /image2latex      
-        cd /image2latex
-        tree -d -L 4
-        python3 -m venv venv
-        source venv/bin/activate
-        
-        apt -y install build-essential
-        python -m pip install --upgrade pip setuptools wheel
-        python -m pip install -e ".[dev]" --no-cache-dir
-        
+        cd /image2latex        
 
         wget -q https://dsc.cloud/999174/lst_files.tar -P /image2latex/data
         wget -q https://dsc.cloud/999174/formula_images_processed.tar -P /image2latex/data
@@ -55,32 +43,41 @@ jobs:
 
   Train:
     resources:
-      instance-type: RTX4000
+      instance-type: P5000
     needs:
-      - InstallPrereq
+      - GetData
     inputs:
-      repo: InstallPrereq.outputs.repo
+      repo: GetData.outputs.repo
       data:
         type: dataset
         with:
-          ref: model_pt
+          ref: dstp2whauo4kpu7
     outputs:
       data:
         type: dataset
         with:
-          ref: model_pt
+          ref: dstp2whauo4kpu7
 
     uses: script@v1
     with:
       script: |-
-        cp -R /inputs/repo/ /image2latex
-        cd /image2latex
+        apt-get update
+        apt-get -y install tree 
+        apt -y install build-essential
+
+        tree -d -L 4 /inputs
+
+        cd /inputs/repo/image2latex
+
+        python3 -m venv venv
         source venv/bin/activate
-        cp -R /inputs/data/model/ /artifacts
+        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install -e ".[dev]" --no-cache-dir
+        
+        cp  /inputs/data/model/model.pt /outputs/data/model/model.pt
         python /scripts/run_experiment.py
 
-        cp  /artifacts/model.pt  /outputs/data/model
-
+        
       image: nvcr.io/nvidia/pytorch:21.10-py3
 
 
