--- a/.gradient/workflows/workflow_modified.yaml
+++ b/.gradient/workflows/workflow_modified.yaml
@@ -36,7 +36,7 @@ jobs:
         tar -xf lst_files.tar  
         tar -xf formula_images_processed.tar 
 
-        cp -R /image2latex/ /outputs/repo 
+        cp -RT /image2latex/ /outputs/repo 
 
       image: nvcr.io/nvidia/pytorch:21.10-py3
 
@@ -62,19 +62,19 @@ jobs:
     with:
       script: |-
         apt-get update
-        apt-get -y install tree 
+        apt-get -y install rsync tree 
         apt -y install build-essential
-
-        tree -d -L 4 /inputs
-
-        cd /inputs/repo/image2latex
+        rsync -r /inputs/repo/ /image2latex
+        tree -d -L 4 /image2latex
+        rsync /inputs/data/model/model.pt/image-to-latex/1cekzc23/checkpoints/epoch=13-val/loss=0.10-val/cer=0.06.ckpt /image2latex/artifacts
+        mv /image2latex/artifacts/cer=0.06.ckpt /image2latex/artifacts/model.pt
+        cd /image2latex
 
         python3 -m venv venv
         source venv/bin/activate
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -e ".[dev]" --no-cache-dir
-        
-        cp  /inputs/data/model/model.pt /outputs/data/model/model.pt
+
         python /scripts/run_experiment.py
 
         
