--- a/.gradient/workflows/workflow_modified.yaml
+++ b/.gradient/workflows/workflow_modified.yaml
@@ -66,8 +66,9 @@ jobs:
         apt -y install build-essential
         rsync -r /inputs/repo/ /image2latex
         tree -d -L 4 /image2latex
-        rsync /inputs/data/model/model.pt/image-to-latex/1cekzc23/checkpoints/epoch=13-val/loss=0.10-val/cer=0.06.ckpt /image2latex/artifacts
-        mv /image2latex/artifacts/cer=0.06.ckpt /image2latex/artifacts/model.pt
+        mkdir /image2latex/artifacts
+        tree -d -L 4 /image2latex
+        rsync /inputs/data/model/model.pt/image-to-latex/1cekzc23/checkpoints/epoch=13-val/loss=0.10-val/cer=0.06.ckpt /image2latex/artifacts/model.pt
         cd /image2latex
 
         python3 -m venv venv
@@ -75,7 +76,7 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
         python -m pip install -e ".[dev]" --no-cache-dir
 
-        python /scripts/run_experiment.py
+        python scripts/run_experiment.py
 
         
       image: nvcr.io/nvidia/pytorch:21.10-py3
